crates/ditto-checker/tests/golden/type-errors/argument_length_mismatch_1.ditto
module Test exports (..)

my_fn = fn () -> 5

five = my_fn(5)
